--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -5,21 +5,20 @@
     <link rel="stylesheet" href="style/main.css">
   </head>
   <body>
-  <h1>My Phone Number and Email</h1>
+    <div class="container">
+      <nav>
+          <li><a href="index.html">Index</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="resume.html">Resume</a></li>
+      </nav>
+    </div>
+    <!-- I think this is a secret message -->
+  <h1>Phone Number and Email</h1>
   <b>My phone number is (510)833-0280 and my email is alfredo.duenas@scholar.smash.org</b>
-  <h2>Please Enter Your Information Below</h2>
-  <form>
-    <label for="name"> Name </label>
-   <input type="text" id="name" placeholder="first and last name">
-   <br>
-   <label for="email">Email </label>
-   <input type="email" id="email" placeholder="email">
-   <br>
-   <label for="message"> Message </label>
-   <textarea id="message" placeholder="enter message"></textarea>
-   <br>
-  <button type="submit">Submit</button>
-</form>
-  <h2><a href="index.html">Back to Index</a></h2>
-  </body
+  <br>
+  <p>Wait For It...</p>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe6O-fnmClneQMi7ho9g6xcmKL9Uy8JNP6_sxuxR-DXBFZUFw/viewform?embedded=true" width="650" height="1100" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+</body>
 </html>
