--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,12 +7,11 @@
   <body>
     <div class="container">
       <nav>
-        <ul>
+          <li><a href="index.html">Index</a></li>
           <li><a href="about.html">About Me</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="resume.html">Resume</a></li>
-        </ul>
       </nav>
     </div>
     <br>
