--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -5,6 +5,39 @@
     <link rel="stylesheet" href="Style/main.css">
   </head>
   <body>
-    <h2><a href="index.html">Back to Index</a></h2>
+    <div class="container">
+      <nav>
+          <li><a href="index.html">Index</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="resume.html">Resume</a></li>
+      </nav>
+    </div>
+    <br>
+    <h1>Alfredo Duenas II</h1>
+    <h2>Career Objective</h2>
+    <p>I am a hard-working high school student that has a 4.0 GPA, with proven problem-solving, teamwork, and critical thinking skills.
+    <br>I am aiming to leverage my abilities to successfully fill the role of an electrical engineer. I soon hope to get into
+    <br>UC Berkeley and major in electrical engineering where I can learn new skills and further my education.</p>
+
+    <h2>Education</h2>
+    <p>Skyline High School</p>
+    <p>GPA: 4.0</p>
+    <p>High School Diploma</p>
+    <p>(Expected in 2022)</p>
+
+    <h2>Awards/Achievements</h2>
+    <p>Latino Student Achievement</p>
+    <p>(Latino student honor roll 2019)</p>
+
+    <h2>Extracurricular Activities</h2>
+    <p>High School Baseball</p>
+    <p>(JV baseball for skyline)</p>
+
+    <h2>Additional Skills</h2>
+    <p>Spanish Speaker</p>
+    <p>Active Listener</p>
+    <p>Leadership</p>
   </body>
 </html>
