--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,7 +14,7 @@
           <li><a href="resume.html">Resume</a></li>
       </nav>
     </div>
-    <br>
+    <h1>This is where I play baseball</h1>
     <p><img src="C:\Users\SMASH Scholar\OneDrive\Pictures\Screenshots\2019-06-30 (2).png" width="150" height="200" class="center" alt="This is an image of me"></p>
   </body>
 </html>
