--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>About Alfredo Duenas II</title>
-    <link rel="stylesheet" href="Style/main.css">
+    <link rel="stylesheet" href="style/main.css">
     <div class="grad">
   </head>
   <body>
