--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>My Resume</title>
-    <link rel="stylesheet" href="Style/main.css">
+    <link rel="stylesheet" href="style/main.css">
   </head>
   <body>
     <div class="container">
