--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,6 +15,6 @@
       </nav>
     </div>
     <h1>This is where I play baseball</h1>
-    <p><img src="C:\Users\SMASH Scholar\OneDrive\Pictures\Screenshots\2019-06-30 (2).png" width="150" height="200" class="center" alt="This is an image of me"></p>
+    <p><img src="http://files.ctctcdn.com/8c0ec1fe001/13be0f5e-cb48-43d2-908e-986d06a0ec0f.jpg" width="150" height="200" class="center" alt="This is an image of me"></p>
   </body>
 </html>
